objects/Vehicle_Order__c.object
<CustomObject>
    <description>Orders represent the process of a Buyer purchasing a Vehicle. Note that we don&apos;t name this object simple &quot;Order&quot; so as to avoid confusion with the standard salesforce Order object. We may one day decide to use that object instead, but not until we understand more about whether it fits with our model.</description>
    <fields>
        <fullName>Buyer_Bill_Of_Sale_Content_ID__c</fullName>
        <label>Buyer Bill Of Sale Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Bill_Of_Sale_URL__c</fullName>
        <formula>IF(ISBLANK(Buyer_Bill_Of_Sale_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Buyer_Bill_Of_Sale_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Bill Of Sale URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_ID__c</fullName>
        <label>Buyer Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicle Orders</relationshipLabel>
        <relationshipName>Vehicle_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_Owner__c</fullName>
        <formula>Buyer_Opportunity_ID__r.Owner.FirstName + &quot; &quot; + Buyer_Opportunity_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_Text__c</fullName>
        <formula>Buyer_Opportunity_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Opportunity Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment_Received_On__c</fullName>
        <label>Buyer Payment Received On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Payment__c</fullName>
        <formula>Final_Sale_Price__c + Taxes_And_Registration__c + Service_Fee__c +
CASE(Vehicle_ID__r.Seller_Opportunity_ID__r.Pricing_Strategy__c, 
&apos;Specific Car Search&apos;, Buyer_Opportunity_ID__r.Specific_Car_Search_Fee__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyer_Proof_Of_Insurance_Content_ID__c</fullName>
        <label>Buyer Proof Of Insurance Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Proof_Of_Insurance_URL__c</fullName>
        <formula>IF(ISBLANK(Buyer_Proof_Of_Insurance_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Buyer_Proof_Of_Insurance_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Proof Of Insurance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Registration_Resubmitted_On__c</fullName>
        <label>Buyer Registration Resubmitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Registration_Sent_On__c</fullName>
        <label>Buyer Registration Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Registration_Submitted_On__c</fullName>
        <label>Buyer Registration Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Return_Payment_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Return Payment Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Return_Payment_Sent_On__c</fullName>
        <label>Buyer Return Payment Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Title_ETA_On__c</fullName>
        <formula>Buyer_Registration_Sent_On__c  + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Title ETA On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_Type__c</fullName>
        <formula>IF(
    (ISPICKVAL( Buyer_Opportunity_ID__r.LeadSource , &quot;Wholesale - auction&quot;) || ISPICKVAL( Buyer_Opportunity_ID__r.LeadSource ,&quot;Wholesale - dealer&quot;)), &quot;Wholesale&quot;, &quot;Peer To Peer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Accepted_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit Accepted By</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Car Enthusiast</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Accepted_On__c</fullName>
        <label>Deposit Accepted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this deposit has expired, if it has then the car won&apos;t be flagged as On Deposit and will be back on sale</description>
        <inlineHelpText>Determines whether this deposit has expired, if it has then the car won&apos;t be flagged as On Deposit and will be back on sale</inlineHelpText>
        <label>Deposit Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment_Method__c</fullName>
        <label>Deposit Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Returned_On__c</fullName>
        <label>Deposit Returned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Returned_Reason__c</fullName>
        <label>Deposit Returned Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Autopay financing fell through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnest financing fell through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Tech financing fell through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal financing fell through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Car - Paid In Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Returned__c</fullName>
        <formula>IF((ISPICKVAL(  Deposit_Returned_Reason__c  , &quot;&quot;)), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <formula>IF
((ISBLANK(Deposit_Accepted_On__c)), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Sale_Price__c</fullName>
        <label>Final Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Haggling_Reason__c</fullName>
        <label>Haggling Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Appeasing Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Discount - Problem Missed In Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Discount - Problem Missed In Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Discount - Problem Missed In Photographs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Discount - Problem Missed In Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Correction Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Ending Soon (Matches Customer Offer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Support (Pricing Approved)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <description>The date at which a vehicle order moves to the &quot;Handover&quot; stage.</description>
        <inlineHelpText>The date at which a vehicle order moves to the &quot;Handover&quot; stage.</inlineHelpText>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Lienholder__c</fullName>
        <label>New Lienholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cashier&apos;s Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Autopay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Earnest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - First Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Non Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan - Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Agreement</label>
        <referenceTo>Shift_Contract__c</referenceTo>
        <relationshipLabel>Vehicle Orders</relationshipLabel>
        <relationshipName>Vehicle_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_PDF__c</fullName>
        <formula>Purchase_Agreement_ID__r.PDF_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Agreement PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_Sent_On__c</fullName>
        <formula>Purchase_Agreement_ID__r.Sent_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Agreement Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_Signed_On__c</fullName>
        <formula>Purchase_Agreement_ID__r.Signed_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Agreement Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned_Notes__c</fullName>
        <label>Returned Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Returned_On__c</fullName>
        <label>Returned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned_Reason__c</fullName>
        <label>Returned Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer Found A Preferable Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer&apos;s Remorse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Vehicle Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Condition (Not Due To Failed PPI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed PPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspected Return Policy Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Region__c</fullName>
        <formula>IF ( CreatedDate  &lt;=   Vehicle_ID__r.Ship_Date__c ,  Vehicle_ID__r.Seller_Opportunity_ID__r.Region_Name__c , Vehicle_ID__r.Listing_Region_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <formula>Vehicle_ID__r.Service_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxes_And_Registration__c</fullName>
        <label>Taxes And Registration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Detail_URL__c</fullName>
        <formula>Vehicle_ID__r.Detail_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Detail URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Orders</relationshipLabel>
        <relationshipName>Vehicle_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Purchased__c</fullName>
        <formula>NOT(ISBLANK(Final_Sale_Price__c)) &amp;&amp; NOT(ISBLANK(Taxes_And_Registration__c)) &amp;&amp; Vehicle_Sale_Complete__c = True</formula>
        <label>Vehicle Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Returned__c</fullName>
        <formula>NOT(ISBLANK(Returned_On__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Sale_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Sale Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Vehicle Order</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vehicle Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>